[gd_scene load_steps=2 format=3 uid="uid://dorrvsqqsbbq1"]

[ext_resource type="Script" uid="uid://c8m7r2tt6k4g0" path="res://scenes/UI/dialogue_ui.gd" id="1_80yk7"]

[node name="DialogueUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_80yk7")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = -362.0
offset_top = -167.0
offset_right = 362.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 723.0
offset_bottom = 169.0
theme_override_constants/separation = 15

[node name="SpeakerLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Speaker name"

[node name="DialogueText" type="RichTextLabel" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true

[node name="NextButton" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Next"

[connection signal="pressed" from="Panel/NextButton" to="." method="_on_next_button_pressed"]
